# vanilla-iced

./: Cargo.toml  LICENSE  README.md
_sample_data/: COPYRIGHT_DISCLAIMER.md  frame.raw
examples/decoders/: Cargo.toml  README.md
examples/decoders/src/: lib.rs  main.rs
examples/decoders/src/container/: mp4.rs
examples/decoders/src/container/mp4/: bitstream_converter.rs
examples/decoders/src/video/: h264.rs
examples/hacky_widget/: Cargo.toml  README.md
examples/hacky_widget/src/: lib.rs  types.rs
examples/iced_iced_baby/: Cargo.toml  README.md
examples/iced_iced_baby/src/: main.rs  player.rs
examples/single_frame/: Cargo.toml  README.md
examples/single_frame/src/: main.rs
src/: lib.rs  program.rs  yuv.rs
src/program/: pipeline.rs  shader.wgsl
src/program/pipeline/: instance.rs  uniforms.rs
src/yuv/: pipeline.rs  shader.wgsl
src/yuv/pipeline/: instance.rs  uniforms.rs
