[package]
name = "decoders"
version = "0.1.0"
authors = ["Nick Senger <dev@nsenger.com>"]
edition = "2021"
publish = false

[dependencies]
mp4 = "0.14"
openh264 = "0.3"
thiserror.workspace = true

hacky_widget = { workspace = true, optional = true }
iced = { workspace = true, optional = true }
vanilla_iced = { workspace = true, optional = true }

[features]
bin = ["hacky_widget", "iced", "vanilla_iced"]

[[bin]]
name = "decoders"
required-features = ["bin"]
